[package]
name = "tm4c123gh6pm_pac"
version = "0.0.1"
edition = "2021"
authors = ["Austin McElroy"]

[dependencies]
critical-section = { version = "1.1.1", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.2", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]